# SabiBoy

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/: .env.example  .eslintrc.js  Dockerfile  package-lock.json  package.json
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/decorators/: roles.decorator.ts
backend/src/games/: games.controller.ts  games.module.ts  games.service.ts
backend/src/schemas/: game.shema.ts  user.schema.ts
backend/src/utils/: util.ts
emulator/: Cargo.toml
emulator/core/: Cargo.toml
emulator/core/src/: gameboy.rs  joyp.rs  lib.rs  test.rs  test2.rs  timer.rs
emulator/core/src/apu/: channel1.rs  channel2.rs  channel3.rs  channel4.rs  mod.rs
emulator/core/src/bus/: cgb.rs  io_address.rs  mod.rs
emulator/core/src/cartridge/: mbc0.rs  mbc1.rs  mbc3.rs  mbc5.rs  mod.rs
emulator/core/src/cpu/: execute.rs  fetch.rs  flags.rs  interrupts.rs  mod.rs  registers.rs
emulator/core/src/cpu/instructions/: block0.rs  block1.rs  block2.rs  block3.rs
emulator/core/src/ppu/: fetcher.rs  fetcher_sprites.rs  helper.rs  mod.rs  pixelfifo.rs
emulator/desktop/: Cargo.toml
emulator/desktop/src/: debug_window.rs  main.rs
emulator/src/: gameboy.rs  main.rs  test.rs  timer.rs
emulator/src/cpu/: registers.rs
emulator/src/cpu/instructions/: block1.rs  block3.rs  mod.rs  opcode_cycles.rs
emulator/wasm/: Cargo.toml
emulator/wasm/src/: lib.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.d.ts
src/: cpu.rs  debug_window.rs  gameboy.rs  joyp.rs  main.rs  test2.rs  timer.rs
src/bus/: io_address.rs  mod.rs
src/cartridge/: cartridge_header.rs  mod.rs
src/cpu/: execute.rs  fetch.rs  flags.rs  interrupts.rs  mod.rs  registers.rs
src/memory/: mod.rs
src/ppu/: fetcher.rs  fetcher_sprites.rs  helper.rs  mod.rs  pixelfifo.rs
(+48 files in other folders)
