[package]
name = "sabiboy"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
minifb = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
minifb_fonts = "0.1.3"
log = "0.4"
env_logger = "0.10"
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = ["ImageData"] }


[profile.release]
debug = true  # Keeps debug symbols
opt-level = 2 # Less aggressive optimization than default 3
lto = false   # Disable link-time optimization
