[package]
name = "gameboy_wasm"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
gameboy_core = { path = "../core" }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["ImageData"] }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1